syntax = "proto3";

package types;

import weak "gogoproto/gogo.proto";

option (gogoproto.populate_all) = true;
option (gogoproto.testgen_all) = true;
option (gogoproto.gostring_all) = true;
option (gogoproto.equal_all) = true;
option (gogoproto.verbose_equal_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_getters_all) = false;

message Application {
    string id = 1 [(gogoproto.customname) = "ID"];
    string name = 2;
    Version version = 3;
    Version proposedVersion = 4;
    string clusterId = 5 [(gogoproto.customname) = "ClusterID"];
    StateMachine stateMachine = 6;
    int64 createdAt = 7;
    int64 updatedAt = 8;
    string State = 9;
}

message Version {
    string id = 1 [(gogoproto.customname) = "ID"];
    string perviousVersionID = 2;
    string command = 3;
    double cpus = 4;
    double mem = 5;
    double disk = 6;
    int32 instances = 7;
    string runAs = 8;
    Container container = 9;
    map<string,string> labels = 10;
     HealthCheck healthCheck = 11;
    map<string,string> env = 12;
    KillPolicy killPolicy = 13;
    UpdatePolicy updatePolicy = 14;
    string constraints = 15;
    repeated string uris = 16;
    repeated string ip = 17;
    string mode = 18;
    string appName = 19;
    string appID = 20;
    int32 priority = 21;
    repeated string args = 22;
}

message Container {
    string type = 1;
    Docker docker = 2;
    repeated Volume volumes = 3;
}

message Docker {
    bool forcePullImage = 1;
    string image = 2;
    string network = 3;
    repeated Parameter parameters = 4;
    repeated PortMapping portMappings = 5;
    bool privileged = 6;
}

message Parameter {
    string key = 1;
    string value = 2;
}

message PortMapping {
    int32 containerPort = 1;
    string name = 2;
    string protocol = 3;
}

message Volume {
    string containerPath = 1;
    string hostPath = 2;
    string mode = 3;
}

message KillPolicy {
    int64 duration = 1;
}

message UpdatePolicy {
    int32 updateDelay = 1;
    int32 maxRetries = 2;
    int32 maxFailovers = 3;
    string action = 4;
}

message HealthCheck {
    string id = 1 [(gogoproto.customname) = "ID"];
    string address = 2;
    string protocol = 3;
    int32 port = 4;
    int32 portIndex = 5;
    string portName = 6;
    string value = 7;
    string path = 8;
    uint32 consecutiveFailures = 9;
    double gracePeriodSeconds = 10;
    double intervalSeconds = 11;
    double timeoutSeconds = 12;
    double delaySeconds = 13;
}

message Slot {
    int32 index = 1;
    string id = 2 [(gogoproto.customname) = "ID"];
    string appId = 3 [(gogoproto.customname) = "AppID"];
    string versionId = 4 [(gogoproto.customname) = "VersionID"];
    string state = 5;
    bool markForDeletion = 6;
    bool markForRollingUpdate = 7;
    bool healthy = 8;
    Task CurrentTask = 9;
    RestartPolicy restartPolicy = 10;
}

message RestartPolicy {
}

message Task {
    string id = 1 [(gogoproto.customname) = "ID"];
    string appId = 2 [(gogoproto.customname) = "AppID"];
    string versionId = 3 [(gogoproto.customname) = "VersionID"];
    string slotId = 4 [(gogoproto.customname) = "SlotID"];
    string state = 5;
    string stdout = 6;
    string stderr = 7;
    repeated uint64 hostPorts = 8;
    string offerId = 9 [(gogoproto.customname) = "OfferID"];
    string agentId = 10 [(gogoproto.customname) = "AgentID"];
    string ip = 11;
    string agentHostName = 12;
    string reason = 13;
    string message = 14;
    int64 createdAt = 15;
    int64 archivedAt = 16;
}

message OfferAllocatorItem {
    string slotId = 1 [(gogoproto.customname) = "SlotID"];
    string offerId = 2 [(gogoproto.customname) = "OfferID"];
    string hostname = 3 [(gogoproto.customname) = "Hostname"];
    string agentId = 4 [(gogoproto.customname) = "AgentID"];
}

message StateMachine {
    State state = 1;
}

message State{
  string name = 1;
  int64 currentSlotIndex = 2;
  int64 targetSlotIndex = 3;
  int64 slotCountNeedUpdate = 4;
}
